--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=3
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://git/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Tree animations/", "res://git/", "res://git/addons/", "res://Characters/Animals/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Tree animations/", "res://Characters/", "res://Characters/Animals/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (246)"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/chest.tscn", "res://objects/treeBasic.tscn", "res://Characters/Animals/chicken.tscn")
-current_scene="res://Levels/gameLevel.tscn"
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/chest.tscn", "res://objects/treeBasic.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/player.tscn")
+current_scene="res://Characters/Animals/chicken.tscn"
 center_split_offset=-413
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=3
-selected_bottom_panel_item=12
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/player.gd"]
-selected_script="res://Characters/player.gd"
-open_help=[]
+selected_script="res://Characters/Animals/chicken.gd"
+open_help=["Node"]
 script_split_offset=70
 list_split_offset=0
 
