--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 21.0,
+"row": 44,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 48.0,
+"row": 52,
+"scroll_position": 58.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 52,
+"selection_to_column": 24,
+"selection_to_line": 52,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Animals/Cow.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 97,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
