animations improved, resource gathering somewhat working

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,25 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Resource",
+"class": &"Equippables",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/usableItems/equippables.gd"
+}, {
+"base": &"Resource",
+"class": &"HarvestType",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/harvestable/resourceType.gd"
+}, {
+"base": &"Equippables",
+"class": &"Tool",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/usableItems/tools.gd"
+}, {
+"base": &"StaticBody2D",
+"class": &"itemSource",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/usableItems/itemResource.gd"
+}])
