--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,34 +12,34 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=457
+dock_hsplit_2=349
 dock_hsplit_3=-416
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Characters/Animals/Cow.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Tree animations/", "res://resources/Sprout Lands - Sprites - premium pack/Animals/", "res://resources/Sprout Lands - Sprites - premium pack/Animals/Cow/", "res://Characters/", "res://Characters/Animals/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/harvestable/choppable.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://resources/UI/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://resources/Sprout Lands - Sprites - premium pack/Characters/", "res://objects/", "res://objects/usableItems/", "res://objects/harvestable/", "res://objects/harvestable/tree/", "res://Characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/chest.tscn", "res://objects/treeBasic.tscn", "res://Characters/player.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Animals/Cow.tscn")
-current_scene="res://Characters/Animals/Cow.tscn"
-center_split_offset=-417
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/harvestable/tree/tree.tscn", "res://objects/inanimate/chest.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Animals/Cow.tscn", "res://Characters/Player/player.tscn")
+current_scene="res://objects/inanimate/chest.tscn"
+center_split_offset=-515
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://Characters/player.gd"]
-selected_script="res://Characters/Animals/Cow.gd"
-open_help=["@GDScript", "Node", "Node2D"]
-script_split_offset=70
+open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://objects/usableItems/itemResource.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://objects/usableItems/tools.gd"]
+selected_script="res://objects/usableItems/itemResource.gd"
+open_help=[]
+script_split_offset=179
 list_split_offset=0
 
 [ShaderEditor]
