--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,36 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://objects/harvestable/resourceType.gd"
 }, {
+"base": &"Node",
+"class": &"Inventory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Player/Inventory/Inventory.gd"
+}, {
+"base": &"Resource",
+"class": &"InventoryItem",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Player/Inventory/inventoryItem.gd"
+}, {
+"base": &"HBoxContainer",
+"class": &"ItemDisplay",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/itemDisplay.gd"
+}, {
+"base": &"Area2D",
+"class": &"Loot",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/pickupItems/loot.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Player/player.gd"
+}, {
 "base": &"Equippables",
 "class": &"Tool",
 "icon": "",
