--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/itemDisplay.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://resources/", "res://resources/UI/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://resources/Sprout Lands - Sprites - premium pack/Characters/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/inanimate/", "res://objects/harvestable/", "res://objects/harvestable/tree/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/tools and materials.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://resources/", "res://resources/UI/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/New tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://resources/new/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/inanimate/", "res://objects/harvestable/", "res://objects/harvestable/tree/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/inanimate/chest.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Animals/Cow.tscn", "res://Characters/Player/player.tscn", "res://objects/harvestable/tree/tree.tscn", "res://objects/pickupItems/lootLog.tscn", "res://objects/pickupItems/lootBranch.tscn", "res://UI/itemDisplay.tscn", "res://UI/itemBar.tscn")
-current_scene="res://UI/itemBar.tscn"
-center_split_offset=-252
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/inanimate/chest.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Animals/Cow.tscn", "res://Characters/Player/player.tscn", "res://objects/harvestable/tree/tree.tscn", "res://objects/pickupItems/lootLog.tscn", "res://objects/pickupItems/lootBranch.tscn", "res://UI/itemDisplay.tscn", "res://UI/itemBar.tscn", "res://objects/harvestable/tree/rock1.tscn", "res://objects/pickupItems/lootStone.tscn")
+current_scene="res://Characters/Player/player.tscn"
+center_split_offset=-406
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://objects/usableItems/itemResource.gd", "res://objects/pickupItems/loot.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://objects/usableItems/tools.gd", "res://objects/harvestable/tree/tree.gd"]
-selected_script="res://Characters/Player/Inventory/inventoryItem.gd"
+selected_script="res://Characters/Player/player.gd"
 open_help=[]
 script_split_offset=179
 list_split_offset=0
