--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,22 +13,22 @@ dock_split_2=44
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=272
-dock_hsplit_3=-298
+dock_hsplit_3=-527
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/harvestable/resourceType.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://resources/", "res://resources/Sprout Lands - UI Pack - Premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://objects/", "res://objects/usableItems/", "res://objects/harvestable/")
+dock_filesystem_selected_paths=PackedStringArray("res://Characters/Player/Inventory/menu_gui.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://resources/UI/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/itembar/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/inanimate/", "res://objects/harvestable/", "res://objects/harvestable/tree/", "res://Levels/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/harvestable/tree/rock1.tscn", "res://UI/itemBarButton.tscn", "res://objects/harvestable/tree/tree.tscn", "res://UI/itemBar.tscn", "res://Levels/gameLevel.tscn", "res://Characters/Player/player.tscn", "res://UI/itemDisplay.tscn")
-current_scene="res://UI/itemDisplay.tscn"
+open_scenes=PackedStringArray("res://objects/harvestable/tree/rock1.tscn", "res://UI/itemBarButton.tscn", "res://objects/harvestable/tree/tree.tscn", "res://Characters/Player/player.tscn", "res://UI/itemDisplay.tscn", "res://UI/itemBar.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Player/Inventory/inventory_gui.tscn", "res://Characters/Player/Inventory/itemSlotGui.tscn", "res://Levels/gameLevel.tscn", "res://Characters/Player/Inventory/menu_gui.tscn")
+current_scene="res://Levels/gameLevel.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://Levels/gameLevel.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://objects/pickupItems/item.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://objects/usableItems/itemResource.gd", "res://objects/pickupItems/loot.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://UI/selectableItem.gd", "res://objects/usableItems/tools.gd", "res://objects/harvestable/tree/tree.gd"]
+open_scripts=["res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://Levels/gameLevel.gd", "res://UI/GUI.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://objects/usableItems/itemResource.gd", "res://objects/pickupItems/loot.gd", "res://Characters/Player/Inventory/menu_gui.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://UI/selectableItem.gd", "res://objects/usableItems/tools.gd", "res://objects/harvestable/tree/tree.gd"]
 selected_script="res://UI/itemDisplay.gd"
 open_help=["Node"]
 script_split_offset=179
