--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -59,6 +59,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Characters/Player/player.gd"
 }, {
+"base": &"Panel",
+"class": &"Slots",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/inventory/itemSlotGui.gd"
+}, {
 "base": &"Equippables",
 "class": &"Tool",
 "icon": "",
