--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,35 +9,35 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=43
+dock_split_2=264
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=362
-dock_hsplit_3=-527
+dock_hsplit_3=-812
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Characters/Player/Inventory/playerInventory.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/items/", "res://UI/inventory/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/itembar/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/inanimate/", "res://objects/harvestable/", "res://objects/harvestable/resources/", "res://Levels/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/UI/InventoryRect.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/items/", "res://UI/inventory/", "res://resources/", "res://resources/UI/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/itembar/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/inanimate/", "res://objects/harvestable/", "res://objects/harvestable/resources/", "res://Levels/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/pickupItems/lootBranch.tscn", "res://objects/pickupItems/lootLog.tscn", "res://objects/pickupItems/lootStone.tscn", "res://Characters/Player/player.tscn", "res://UI/itemDisplay.tscn", "res://objects/harvestable/resources/tree.tscn", "res://objects/harvestable/resources/rock1.tscn", "res://UI/itemBar.tscn", "res://UI/itemBarButton.tscn", "res://UI/inventory/inventory_gui.tscn", "res://UI/inventory/itemSlotGui.tscn")
-current_scene="res://Characters/Player/player.tscn"
-center_split_offset=-288
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://objects/pickupItems/lootBranch.tscn", "res://objects/pickupItems/lootLog.tscn", "res://objects/pickupItems/lootStone.tscn", "res://Characters/Player/player.tscn", "res://UI/itemDisplay.tscn", "res://objects/harvestable/resources/tree.tscn", "res://objects/harvestable/resources/rock1.tscn", "res://UI/itemBar.tscn", "res://UI/inventory/inventory_gui.tscn", "res://UI/menu/menu_gui.tscn")
+current_scene="res://Levels/gameLevel.tscn"
+center_split_offset=-354
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://Levels/gameLevel.gd", "res://UI/GUI.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://objects/usableItems/itemResource.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://UI/menu/menu_gui.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://UI/selectableItem.gd", "res://objects/usableItems/tools.gd"]
-selected_script="res://Characters/Player/Inventory/inventoryTwo.gd"
+selected_script="res://Levels/gameLevel.gd"
 open_help=[]
 script_split_offset=179
 list_split_offset=0
