whole new hotbar system. inventory and hotbar working

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,6 +17,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://objects/harvestable/resourceType.gd"
 }, {
+"base": &"Button",
+"class": &"HotbarSlots",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/hotbar/hotbarSlotGui.gd"
+}, {
 "base": &"Node",
 "class": &"Inventory",
 "icon": "",
@@ -47,6 +53,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://UI/itemDisplay.gd"
 }, {
+"base": &"Panel",
+"class": &"ItemInHotbarSlot",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/hotbar/ItemInHotbarSlotGui.gd"
+}, {
+"base": &"Panel",
+"class": &"ItemInSlot",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/inventory/ItemInSlotGui.gd"
+}, {
 "base": &"Area2D",
 "class": &"Loot",
 "icon": "",
@@ -59,7 +77,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Characters/Player/player.gd"
 }, {
-"base": &"Panel",
+"base": &"Button",
 "class": &"Slots",
 "icon": "",
 "language": &"GDScript",
