--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 79,
-"scroll_position": 88.0,
+"scroll_position": 84.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 79,
@@ -81,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 64,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 36,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -99,7 +99,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 39,
-"scroll_position": 16.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -195,16 +195,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 51.0,
+"row": 24,
+"scroll_position": 6.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 9,
-"selection_to_column": 38,
-"selection_to_line": 9,
+"selection_from_column": 2,
+"selection_from_line": 24,
+"selection_to_column": 43,
+"selection_to_line": 24,
 "syntax_highlighter": "GDScript"
 }
 
@@ -227,16 +227,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 11,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 5,
-"selection_from_line": 16,
-"selection_to_column": 6,
-"selection_to_line": 16,
+"selection_from_column": 0,
+"selection_from_line": 11,
+"selection_to_column": 0,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -245,10 +245,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -273,16 +273,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 15,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
+"selection_from_column": 2,
+"selection_from_line": 15,
 "selection_to_column": 50,
-"selection_to_line": 17,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -308,9 +308,13 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 15,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 15,
+"selection_to_column": 14,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -319,11 +323,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 4.0,
+"row": 74,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -333,11 +337,83 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 12.0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 13,
+"selection_to_column": 18,
+"selection_to_line": 13,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/inventory/ItemInSlotGui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 18,
+"selection_to_column": 12,
+"selection_to_line": 18,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/hotbar/hotbarSlotGui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 12,
+"selection_to_column": 21,
+"selection_to_line": 17,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/hotbar/hotbar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 21,
+"selection_to_column": 22,
+"selection_to_line": 32,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/hotbar/ItemInHotbarSlotGui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
