--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 111,
-"scroll_position": 0.0,
+"row": 84,
+"scroll_position": 55.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 0.0,
+"row": 46,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 93,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 15.0,
+"row": 33,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -273,16 +273,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 27,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 15,
-"selection_to_column": 50,
-"selection_to_line": 15,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -323,16 +319,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 78,
-"scroll_position": 48.0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 37,
-"selection_from_line": 78,
-"selection_to_column": 50,
-"selection_to_line": 78,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 79,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -341,16 +337,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
+"row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 30,
-"selection_to_column": 31,
-"selection_to_line": 30,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -359,16 +351,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 23,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 18,
-"selection_to_column": 30,
-"selection_to_line": 21,
+"selection_from_column": 5,
+"selection_from_line": 23,
+"selection_to_column": 14,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -405,7 +397,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
@@ -433,16 +425,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 3,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 19,
-"selection_to_column": 14,
-"selection_to_line": 19,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -469,11 +457,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 0.0,
+"row": 56,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -483,10 +471,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -497,10 +485,56 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 7.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/tiles/worldTileMap.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/tiles/treeSeasons.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 4,
+"selection_to_column": 0,
+"selection_to_line": 15,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/tiles/rockSmallSeasons.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
