added animal growth and produce

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,32 +12,32 @@ dock_floating={}
 dock_split_2=-159
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=279
-dock_hsplit_3=-794
+dock_hsplit_2=371
+dock_hsplit_3=-805
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/items/pickaxe.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/items/", "res://resources/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/itembar/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Winter/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Summer/", "res://resources/Sprout Lands - Sprites - premium pack/Spring/", "res://resources/Sprout Lands - Sprites - premium pack/Autumn/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/harvestable/", "res://Levels/", "res://GameSystem/", "res://GameSystem/tiles/", "res://Characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/pickupItems/lootEgg.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/items/", "res://resources/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/itembar/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://resources/Sprout Lands - Sprites - premium pack/Animals/Cow_Baby/", "res://resources/Sprout Lands - Sprites - premium pack/Animals/Chicken_Baby/", "res://objects/", "res://objects/usableItems/", "res://objects/pickupItems/", "res://objects/harvestable/", "res://objects/harvestable/resources/", "res://GameSystem/", "res://GameSystem/animals/", "res://Characters/", "res://Characters/Animals/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://objects/harvestable/resources/tree.tscn", "res://objects/harvestable/resources/rock1.tscn")
-current_scene="res://objects/harvestable/resources/rock1.tscn"
-center_split_offset=-354
+open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://Characters/Animals/chicken.tscn", "res://Characters/Animals/Cow.tscn")
+current_scene="res://Characters/Animals/chicken.tscn"
+center_split_offset=-473
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://Characters/Animals/chicken.gd", "res://GameSystem/effects/dayOverlay.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://Levels/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://UI/menu/menu_gui.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/tiles/worldTileMap.gd"]
-selected_script="res://GameSystem/tiles/rockSmallSeasons.gd"
+open_scripts=["res://GameSystem/animals/animal.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://UI/menu/menu_gui.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
+selected_script="res://Characters/Animals/chicken.gd"
 open_help=["CollisionShape2D"]
 script_split_offset=179
 list_split_offset=0
