--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,22 @@
 list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"Animal",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/animals/animal.gd"
+}, {
+"base": &"Animal",
+"class": &"Chicken",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Animals/chicken.gd"
+}, {
+"base": &"Animal",
+"class": &"Cow",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Animals/Cow.gd"
+}, {
 "base": &"Node2D",
 "class": &"Equip",
 "icon": "",
@@ -16,6 +34,18 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://GameSystem/tiles/farmingLand.gd"
+}, {
+"base": &"Equippables",
+"class": &"Feed",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects/usableItems/feedItem.gd"
+}, {
+"base": &"StaticBody2D",
+"class": &"FoodTrough",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/animals/foodTrough.gd"
 }, {
 "base": &"Resource",
 "class": &"HarvestType",
@@ -112,6 +142,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://objects/usableItems/tools.gd"
+}, {
+"base": &"StaticBody2D",
+"class": &"WaterTrough",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/animals/waterTrough.gd"
 }, {
 "base": &"TextureButton",
 "class": &"itemBarButton",
