--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -125,6 +125,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://objects/usableItems/seedItems.gd"
 }, {
+"base": &"Resource",
+"class": &"ShopInventory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/shop/ShopInventory.gd"
+}, {
 "base": &"Button",
 "class": &"Slots",
 "icon": "",
