items can be purchased

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://GameSystem/animals/animal.gd"
 }, {
+"base": &"Item",
+"class": &"AnimalItem",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/animals/itemAnimals.gd"
+}, {
 "base": &"Animal",
 "class": &"Chicken",
 "icon": "",
