tasks and rewards implemented - some bugs

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -143,6 +143,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://UI/inventory/itemSlotGui.gd"
 }, {
+"base": &"Resource",
+"class": &"Task",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/tasks/Tasks.gd"
+}, {
 "base": &"Area2D",
 "class": &"TilledSoil",
 "icon": "",
