--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 111,
-"scroll_position": 0.0,
+"row": 65,
+"scroll_position": 32.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 111,
@@ -131,12 +131,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
+"row": 4,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 4,
+"selection_to_column": 15,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -273,12 +277,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 12,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 12,
+"selection_to_column": 24,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -322,13 +330,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 6,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 40,
-"selection_to_line": 3,
+"selection_from_line": 6,
+"selection_to_column": 70,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -351,16 +359,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 4.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 23,
-"selection_to_column": 14,
-"selection_to_line": 23,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -369,12 +373,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 24.0,
-"selection": false,
+"row": 47,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 47,
+"selection_to_column": 61,
+"selection_to_line": 47,
 "syntax_highlighter": "GDScript"
 }
 
@@ -497,10 +505,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -627,10 +635,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 65,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -641,11 +649,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 0.0,
+"row": 28,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -687,12 +695,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 46.0,
-"selection": false,
+"row": 104,
+"scroll_position": 74.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 88,
+"selection_to_column": 27,
+"selection_to_line": 88,
 "syntax_highlighter": "GDScript"
 }
 
@@ -719,10 +731,70 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
+"row": 31,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 31,
+"selection_to_column": 26,
+"selection_to_line": 31,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/shop/sellItemSlot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/notebook/Tasks.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 29,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 53,
+"scroll_position": 16.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/tasks/Tasks.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 33,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/notebook/tasks/taskSlot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
