added saving to animals,player and inventory

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -53,6 +53,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://GameSystem/animals/foodTrough.gd"
 }, {
+"base": &"Node2D",
+"class": &"GameLevel",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Levels/gameLevel.gd"
+}, {
 "base": &"Resource",
 "class": &"HarvestType",
 "icon": "",
@@ -76,6 +82,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Characters/Player/Inventory/inventoryItem.gd"
+}, {
+"base": &"Resource",
+"class": &"InventorySave",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/save/gameLevel.gd"
 }, {
 "base": &"Resource",
 "class": &"InventoryTwo",
@@ -125,11 +137,11 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Characters/Player/player.gd"
 }, {
-"base": &"Resource",
+"base": &"Node",
 "class": &"SaveGame",
 "icon": "",
 "language": &"GDScript",
-"path": "res://GameSystem/save/SaveGame.gd"
+"path": "res://GameSystem/save/SaveLoadGame.gd"
 }, {
 "base": &"Equippables",
 "class": &"Seeds",
