cleared up code

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,38 +9,38 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-159
+dock_split_2=-16
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=335
-dock_hsplit_3=-921
+dock_hsplit_2=354
+dock_hsplit_3=-448
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://GameSystem/tiles/tilledSoil.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://resources/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/Old tiles/", "res://GameSystem/", "res://GameSystem/tiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/Sprout Lands - Sprites - premium pack/Objects/Mushrooms, Flowers, Stones.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/menu/", "res://UI/dialog/", "res://resources/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/Dialouge UI/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://GameSystem/", "res://GameSystem/save/", "res://GameSystem/music/", "res://GameSystem/mainMenu/", "res://GameSystem/dialog/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://GameSystem/crops/cabbagePlant.tscn", "res://UI/summary/summaryGui.tscn", "res://UI/notebook/notebook.tscn", "res://UI/inventory/inventory_gui.tscn", "res://UI/inventory/itemSlotGui.tscn", "res://UI/inventory/ItemInSlotGui.tscn", "res://objects/pickupItems/lootCabbageSeed.tscn", "res://objects/pickupItems/lootCabbage.tscn", "res://objects/pickupItems/lootCarrotSeed.tscn", "res://objects/pickupItems/lootBranch.tscn", "res://objects/pickupItems/lootCucumberSeed.tscn", "res://objects/pickupItems/lootParsnipSeed.tscn", "res://GameSystem/crops/wheatPlant.tscn", "res://GameSystem/tiles/tilledSoil.tscn")
-current_scene="res://UI/notebook/notebook.tscn"
-center_split_offset=-540
+open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://GameSystem/animals/waterTrough.tscn", "res://UI/summary/summaryGui.tscn", "res://Characters/Animals/Cow.tscn", "res://Characters/Animals/chicken.tscn", "res://UI/inventory/inventory_gui.tscn", "res://UI/inventory/itemSlotGui.tscn", "res://UI/hotbar/hotbar.tscn", "res://UI/hotbar/hotbarSlotGui.tscn", "res://GameSystem/music/music.tscn", "res://GameSystem/dialog/textbox.tscn", "res://UI/dialog/dialogBox.tscn", "res://GameSystem/animals/foodTrough.tscn")
+current_scene="res://Levels/gameLevel.tscn"
+center_split_offset=-496
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
-open_scripts=["res://GameSystem/animals/animal.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
-selected_script="res://UI/notebook/notebook.gd"
+open_scripts=["res://GameSystem/animals/animal.gd", "res://GameSystem/dialog/animalLand.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://UI/dialog/dialogBox.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/dialog/textbox.gd", "res://GameSystem/dialog/textManager.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
+selected_script="res://GameSystem/TimeManager.gd"
 open_help=["CollisionShape2D", "Dictionary", "Node", "Object", "ResourceLoader", "ResourceSaver"]
-script_split_offset=179
-list_split_offset=0
+script_split_offset=247
+list_split_offset=179
 
 [ShaderEditor]
 
