added game file

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -80,8 +80,12 @@ snap_mode=2
 
 [project_settings]
 
-advanced_mode=false
+advanced_mode=true
 
 [color_picker]
 
 recent_presets=PackedColorArray(1, 1, 0.478431, 1, 1, 0.733333, 0.478431, 1, 1, 0.733333, 0.478431, 0.462745, 1, 1, 1, 0.360784, 1, 0.840597, 0.696324, 0.462745, 1, 0.631373, 1, 1, 0.66099, 0.805515, 0.932702, 1, 0, 0, 0.054902, 0.192157, 0.982343, 0.982342, 0.982342, 1)
+
+[export_options]
+
+default_filename="SproutQuest"
